actualizacion de puertos de la aplicacion